# SLM190T

./: .gitignore  README-Chinese.md  README.md
3100E_SDK/xinyiNBIot_AP/: CMakeLists.txt  xybuild.py  xykeil.py  芯翼导读.md
3100E_SDK/xinyiNBIot_AP/DRIVERS/: CMakeLists.txt
3100E_SDK/xinyiNBIot_AP/DRIVERS/driverlib/inc/: abdhwd.h  adc.h  cache.h  common.h  crc.h  crypto.h  csp.h  dma.h  driver_conf.h  flash_vendor.h  gpio.h  hw_abdhwd.h  hw_adc.h  hw_analog.h  hw_cache.h  hw_crc.h  hw_crypto.h  hw_csp.h  hw_dma.h  hw_gpio.h  hw_ints.h  hw_iso7816.h  hw_keyscan.h  hw_lcdc.h  hw_lptimer.h  hw_mcnt.h  hw_phytimer.h  hw_prcm.h  hw_qspi_flash.h  hw_sema.h  hw_sha1.h  hw_spi.h  hw_tick.h  hw_timer.h  hw_trng.h  hw_uart.h  hw_utc.h  i2c.h  interrupt.h  iso7816.h  (+19 more)
3100E_SDK/xinyiNBIot_AP/DRIVERS/driverlib/src/: abdhwd.c  adc.c  cache.c  common.c  crc.c  crypto.c  csp.c  dma.c  flash_vendor.c  gpio.c  hw_sha1.c  i2c.c  interrupt.c  iso7816.c  keyscan.c  lcdc.c  lptimer.c  mcnt.c  prcm.c  qspi_flash.c  rc32k.c  rf_drv.c  sema.c  spi.c  systick.c  tick.c  timer.c  trng.c  uart.c  utc.c  watchdog.c
3100E_SDK/xinyiNBIot_AP/EXT/: CMakeLists.txt
3100E_SDK/xinyiNBIot_AP/EXT/BLE/: readme_xy.txt
3100E_SDK/xinyiNBIot_AP/EXT/BLE/inc/: ble_api.h  ble_at.h  ble_drv.h  ble_fota.h  ble_hci.h  ble_log.h  ble_main.h  ble_msg.h  ble_ymodem.h
3100E_SDK/xinyiNBIot_AP/EXT/BLE/src/: ble_api.c  ble_at.c  ble_at_serv.c  ble_drv.c  ble_fota.c  ble_hci.c  ble_log.c  ble_main.c  ble_msg.c  ble_patch.c  ble_ymodem.c
3100E_SDK/xinyiNBIot_AP/EXT/GNSS/: T_gnss_performance.py  log_NMEA.txt  readme_xy.txt  测试AT命令.txt
3100E_SDK/xinyiNBIot_AP/EXT/GNSS/inc/: gnss_api.h  gnss_at.h  gnss_drv.h  gnss_main.h  gnss_msg.h  gnss_patch.h
3100E_SDK/xinyiNBIot_AP/EXT/GNSS/src/: gnss_api.c  gnss_at.c  gnss_drv.c  gnss_main.c  gnss_msg.c
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/: CMakeLists.txt
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/AT/inc/: at_CP_api.h  at_cmd_regist.h  at_hardware_cmd.h  at_process.h  urc_process.h  xy_at_api.h
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/AT/src/: at_260Y_cmd.c  at_CP_api.c  at_bc25_cmd.c  at_cmd_regist.c  at_hardware_cmd.c  at_process.c  urc_process.c
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/HAL/: readme.txt
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/HAL/inc/: hal_adc.h  hal_aes.h  hal_csp.h  hal_def.h  hal_gpio.h  hal_i2c.h  hal_lptimer.h  hal_lpuart.h  hal_spi.h  hal_timer.h  hal_uart.h  hal_watchdog.h
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/HAL/src/: hal_adc.c  hal_aes.c  hal_csp.c  hal_gpio.c  hal_i2c.c  hal_lptimer.c  hal_lpuart.c  hal_spi.c  hal_timer.c  hal_uart.c  hal_watchdog.c  hal_weak.c
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/at_uart/inc/: at_ipc_process.h  at_uart.h  auto_baudrate.h  zero_copy.h
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/at_uart/src/: at_ipc_process.c  at_uart.c  at_uart_sleep_ctl.c  auto_baudrate.c  zero_copy.c
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/ipc_msg/inc/: user_ipc_msg.h
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/ipc_msg/src/: user_ipc_msg.c
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/mcu_adapt/inc/: mcu_adapt.h
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/mcu_adapt/other/: readme_xy.txt
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/mcu_adapt/src/: mcu_gpio.c  mcu_i2c.c  mcu_lcd.c  mcu_spi.c  mcu_timer.c  mcu_uart.c
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/utilities/inc/: at_utils.h  driver_utils.h  xy_ftl.h  xy_list.h  xy_printf.h  xy_utils.h
3100E_SDK/xinyiNBIot_AP/MIDDLEWARE/utilities/src/: at_utils.c  xy_ftl.c  xy_htol_test.c  xy_list.c  xy_printf.c  xy_utils.c
3100E_SDK/xinyiNBIot_AP/PROJECT/: CMakeLists.txt
3100E_SDK/xinyiNBIot_AP/SO/: CMakeLists.txt  readme.txt
3100E_SDK/xinyiNBIot_AP/SO/src/: so.c
3100E_SDK/xinyiNBIot_AP/SYSAPP/: CMakeLists.txt
3100E_SDK/xinyiNBIot_AP/TOOLS/cmake/: arm-gcc-toolchain.cmake  config.cmake  timestamp.cmake  timestamp.h.in  utils.cmake
3100E_SDK/xinyiNBIot_AP/TOOLS/keil/: template.uvoptx  template.uvprojx
3100E_SDK/xinyiNBIot_AP/TOOLS/linkscript/: mem_2m.ld  mem_4m.ld  sections.ld  so.ld  template_2m.sct  template_2m_1200.sct  template_4m.sct  template_4m_1200.sct
3100E_SDK/xinyiNBIot_CP/: CMakeLists.txt  readme_xinyi.md  remove_mk_ini.py  xy_soc_ver_copy.py  xybuild.py
3100E_SDK/xinyiNBIot_CP/APPLIB/: CMakeLists.txt  readme_xy.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/Dtls/: CMakeLists.txt  readme.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/at_cmd/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/cJSON/: CMakeLists.txt  cJSON.c
3100E_SDK/xinyiNBIot_CP/APPLIB/cloud/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/dm/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/fota/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/fs/: CMakeLists.txt  readme.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/http/: CMakeLists.txt  readme.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/libcoap/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/lwip/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/mqtt/: CMakeLists.txt  readme.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/netled/: CMakeLists.txt  net_led_pro.c
3100E_SDK/xinyiNBIot_CP/APPLIB/onomondo/: CMakeLists.txt  arm-gcc-toolchain.cmake  storage-path.patch
3100E_SDK/xinyiNBIot_CP/APPLIB/perf/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/ping/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/socket/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/wakaama/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/APPLIB/wireshark/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/ARCH/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/DRIVERS/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/KERNEL/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/NBIotPs/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/SYSAPP/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/SYSAPP/diag_ctrl/: readme.txt
3100E_SDK/xinyiNBIot_CP/SYSAPP/lowpower/: lowpower.mk
3100E_SDK/xinyiNBIot_CP/SYSAPP/system/: system.mk
3100E_SDK/xinyiNBIot_CP/TARGETS/: CMakeLists.txt
3100E_SDK/xinyiNBIot_CP/TOOLS/cmake/: arm-gcc-toolchain.cmake  config.cmake  utils.cmake
3100E_SDK/xinyiNBIot_CP/TOOLS/linkscript/: mem_2m.ld  mem_4m.ld  sections.ld
3100E_SDK/xinyiNBIot_CP/loginfo/XY_SOC_VER=1/: loginfo.info
(+986 files in other folders)
